<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_internet">دستگاه به اینترنت متصل نیست</string>

    <string name="peyman_card">کارت پیمان</string>
    <string name="enter_report_name">نام گزارش را وارد کنید</string>
    <string name="path_saved_file">مسیر ذخیره فایل در حافظه دستگاه پوشه «پورتال مدیران» میباشد.</string>
    <string name="error_save_report">خطا در ذخیره گزارش</string>
    <string name="not_pdf_exist">گزارشی برای ذخیره یافت نشد</string>
    <string name="contract_accounting_document">وضعیت مالی</string>
    <string name="contract_status_report">صورت وضعیت</string>
    <string name="extend">تمدیدیه ها</string>
    <string name="last_update_date">تاریخ آخرین بروز رسانی :</string>
    <string name="update">بروزرسانی</string>
    <string name="no_date">بدون تاریخ</string>
    <string name="delays">تاخیرات</string>
    <string name="contract_goods">اقلام قرارداد</string>
    <string name="contract_executive">عوامل اجرایی</string>
    <string name="contract_attachments">ضمائم قرارداد</string>
    <string name="search_in_contracts">جستجو در قراردادها</string>
    <string name="filter_on_contract_status">"فیلتر بر اساس وضعیت قرارداد"</string>
    <string name="contract_code">شماره قرارداد :</string>
    <string name="contract_title">عنوان قرارداد :</string>
    <string name="contract_name">تیپ قرارداد :</string>
    <string name="customer_title">طرف قرارداد :</string>
    <string name="approve_date">تاریخ مبادله :</string>
    <string name="duration">مدت :</string>
    <string name="start_date0">تاریخ شروع :</string>
    <string name="expire_date">تاریخ منقضی :</string>
    <string name="physical_percent_plan">پیشرفت برنامه ای :</string>
    <string name="physical_percent_progress">پیشرفت فیزیکی :</string>
    <string name="percent_price_progress">پیشرفت ریالی :</string>
    <string name="total_price_contract">مبلغ نهایی قرارداد :</string>
    <string name="executive_orders">عوامل اجرایی</string>
    <string name="document_pictures">مستندات و تصاویر</string>
    <string name="status_report">صورت وضعیت</string>
    <string name="payman_card">کارت پیمان</string>
    <string name="financial_situation">وضعیت مالی</string>
    <string name="do_search">جستجو کنید</string>
    <string name="fill_search_key">کلمه جستجو را وارد کنید</string>
    <string name="filter_contract">فیلتر قراردادها</string>
    <string name="company_contract">شرکت طرف قرارداد</string>
    <string name="electric_company">شرکت برق منطقه ای</string>
    <string name="contract_status">وضعیت قرارداد</string>
    <string name="file_name">نام فایل :</string>
    <string name="file_type">نوع فایل :</string>
    <string name="register_date">تاریخ ثبت</string>
    <string name="description1">توضیحات :</string>
    <string name="delete">حذف</string>
    <string name="download">دانلود</string>
    <string name="add_attachments">افزودن ضمائم</string>
    <string name="no_file_exist_to_upload">فایلی برای ارسال وجود ندارد</string>
    <string name="attachments">ضمائم</string>
    <string name="error_download_file_call_support">خطا در بارگیری فایل، مجددا تلاش کنید یا با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="are_you_sure_delete">آیا از حذف آیتم مطمئن هستید؟</string>
    <string name="error_save_file_call_support">خطا در ذخیره سازی فایل، مجددا تلاش کنید یا با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="error_save_file">خطا در ذخیره فایل</string>
    <string name="incomplete_file_call_support">اطلاعات فایل ضمیمه ناقص است، با پشتیبانی تماس حاصل فرمایید.</string>
    <string name="document_type">نوع مستند :</string>
    <string name="date">تاریخ :</string>
    <string name="note">شرح :</string>
    <string name="delay_description">شرح تاخیر :</string>
    <string name="letter_number">شماره نامه :</string>
    <string name="letter_date">تاریخ نامه :</string>
    <string name="delay_duration">مدت تاخیر :</string>
    <string name="end_date0">تاریخ پایان :</string>
    <string name="executive_type">نوع عامل اجرایی :</string>
    <string name="family_name">نام و نام خانوادگی :</string>
    <string name="job">شغل :</string>
    <string name="mobile">شماره موبایل :</string>
    <string name="extend_code">شماره تغییر(تمدید) :</string>
    <string name="extend_type">نوع تمدید :</string>
    <string name="extend_date">تاریخ تمدید :</string>
    <string name="duration_type">نوع مدت :</string>
    <string name="change_duration">مدت تغییر :</string>
    <string name="percent">درصد :</string>
    <string name="debit_price">مبلغ افزایش :</string>
    <string name="credit_price">مبلغ کاهش :</string>
    <string name="has_extend_insurance">بیمه نامه تمدید شده است ؟</string>
    <string name="goods_code">کد کالا :</string>
    <string name="goods_unit">واحد کالا :</string>
    <string name="goods_name">نام کالا :</string>
    <string name="issue_amount">قبض انبار شده :</string>
    <string name="factor_amount">برگشت شده :</string>
    <string name="remain">باقیمانده :</string>
    <string name="count1">تعداد :</string>
    <string name="total_price1">بهای کل :</string>
    <string name="file_size">حجم فایل :</string>
    <string name="kilo_byte">کیلوبایت</string>
    <string name="in_exchange">درحال مبادله</string>
    <string name="current">جاری</string>
    <string name="terminated">خاتمه یافته</string>
    <string name="need_specify">نیازمند تعیین تکلیف</string>


</resources>