<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.51" />

        <TextView
            android:id="@+id/lblDelayDescription"
            style="@style/LabelCaptionStyle"
            android:text="@string/delay_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txtDelayDescription"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lblDelayDescription"
            app:layout_constraintTop_toTopOf="@id/lblDelayDescription" />

        <TextView
            android:id="@+id/lblLetterNo"
            style="@style/LabelCaptionStyle"
            android:text="@string/letter_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtDelayDescription" />

        <TextView
            android:id="@+id/txtLetterNo"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblLetterNo"
            app:layout_constraintTop_toTopOf="@id/lblLetterNo" />

        <TextView
            android:id="@+id/lblLetterDate"
            style="@style/LabelCaptionStyle"
            android:text="@string/letter_date"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintTop_toTopOf="@id/lblLetterNo"
            android:layout_marginTop="0dp"/>

        <TextView
            android:id="@+id/txtLetterDate"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblLetterDate"
            app:layout_constraintTop_toTopOf="@id/lblLetterDate" />


        <TextView
            android:id="@+id/lblStartDate"
            style="@style/LabelCaptionStyle"
            android:text="@string/start_date0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLetterNo" />

        <TextView
            android:id="@+id/txtStartDate"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblStartDate"
            app:layout_constraintTop_toTopOf="@id/lblStartDate" />


        <TextView
            android:id="@+id/lblEndDate"
            style="@style/LabelCaptionStyle"
            android:text="@string/end_date0"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintTop_toTopOf="@id/lblStartDate"
            android:layout_marginTop="0dp"/>

        <TextView
            android:id="@+id/txtEndDate"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblEndDate"
            app:layout_constraintTop_toTopOf="@id/lblEndDate" />

        <TextView
            android:id="@+id/lblDelayDuration"
            style="@style/LabelCaptionStyle"
            android:text="@string/delay_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtStartDate" />

        <TextView
            android:id="@+id/txtDelayDuration"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblDelayDuration"
            app:layout_constraintTop_toTopOf="@id/lblDelayDuration" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>