<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.51" />

        <TextView
            android:id="@+id/lblGoodsCode"
            style="@style/LabelCaptionStyle"
            android:text="@string/goods_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtGoodsCode"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblGoodsCode"
            app:layout_constraintTop_toTopOf="@id/lblGoodsCode" />

        <TextView
            android:id="@+id/lblGoodsUnit"
            style="@style/LabelCaptionStyle"
            android:text="@string/goods_unit"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtGoodsUnit"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblGoodsUnit"
            app:layout_constraintTop_toTopOf="@id/lblGoodsUnit" />

        <TextView
            android:id="@+id/lblGoodsName"
            style="@style/LabelCaptionStyle"
            android:text="@string/goods_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtGoodsCode" />

        <TextView
            android:id="@+id/txtGoodsName"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lblGoodsName"
            app:layout_constraintTop_toTopOf="@id/lblGoodsName" />

        <TextView
            android:id="@+id/lblIssueAmount"
            style="@style/LabelCaptionStyle"
            android:text="@string/issue_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtGoodsName" />

        <TextView
            android:id="@+id/txtIssueAmount"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblIssueAmount"
            app:layout_constraintTop_toTopOf="@id/lblIssueAmount" />

        <TextView
            android:id="@+id/lblFactorAmount"
            style="@style/LabelCaptionStyle"
            android:text="@string/factor_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtIssueAmount" />

        <TextView
            android:id="@+id/txtFactorAmount"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblFactorAmount"
            app:layout_constraintTop_toTopOf="@id/lblFactorAmount" />


        <TextView
            android:id="@+id/lblRemain"
            style="@style/LabelCaptionStyle"
            android:text="@string/remain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFactorAmount" />

        <TextView
            android:id="@+id/txtRemain"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblRemain"
            app:layout_constraintTop_toTopOf="@id/lblRemain" />

        <TextView
            android:id="@+id/lblCount"
            style="@style/LabelCaptionStyle"
            android:text="@string/count1"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintTop_toBottomOf="@id/txtFactorAmount" />

        <TextView
            android:id="@+id/txtCount"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblCount"
            app:layout_constraintTop_toTopOf="@id/lblCount" />

        <TextView
            android:id="@+id/lblTotalPrice"
            style="@style/LabelCaptionStyle"
            android:text="@string/total_price1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRemain"/>

        <TextView
            android:id="@+id/txtTotalPrice"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblTotalPrice"
            app:layout_constraintTop_toTopOf="@id/lblTotalPrice" />


        <TextView
            android:id="@+id/lblUnitPrice"
            style="@style/LabelCaptionStyle"
            android:text="@string/total_price1"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintTop_toTopOf="@id/lblTotalPrice"
            android:layout_marginTop="0dp"/>

        <TextView
            android:id="@+id/txtUnitPrice"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblUnitPrice"
            app:layout_constraintTop_toTopOf="@id/lblUnitPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        <TextView
            android:id="@+id/txtGoods"
            style="@style/TextTitleStyle"
            android:lineSpacingExtra="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>