<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.49" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_center_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.51" />

        <TextView
            android:id="@+id/lblExecutiveType"
            style="@style/LabelCaptionStyle"
            android:text="@string/executive_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtExecutiveType"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblExecutiveType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lblExecutiveType" />

        <TextView
            android:id="@+id/lblFamily"
            style="@style/LabelCaptionStyle"
            android:text="@string/family_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtExecutiveType" />

        <TextView
            android:id="@+id/txtFamily"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblFamily"
            app:layout_constraintTop_toTopOf="@id/lblFamily" />

        <TextView
            android:id="@+id/lblJob"
            style="@style/LabelCaptionStyle"
            android:text="@string/job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFamily" />

        <TextView
            android:id="@+id/txtJob"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblJob"
            app:layout_constraintTop_toTopOf="@id/lblJob" />

        <TextView
            android:id="@+id/lblMobile"
            style="@style/LabelCaptionStyle"
            android:text="@string/mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtJob" />

        <TextView
            android:id="@+id/txtMobile"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblMobile"
            app:layout_constraintTop_toTopOf="@id/lblMobile" />

        <TextView
            android:id="@+id/lblStartDate"
            style="@style/LabelCaptionStyle"
            android:text="@string/start_date0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtMobile" />

        <TextView
            android:id="@+id/txtStartDate"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblStartDate"
            app:layout_constraintStart_toEndOf="@id/guideline_center_right"
            app:layout_constraintTop_toTopOf="@id/lblStartDate" />


        <TextView
            android:id="@+id/lblEndDate"
            style="@style/LabelCaptionStyle"
            android:layout_marginTop="0dp"
            android:text="@string/start_date0"
            app:layout_constraintEnd_toStartOf="@id/guideline_center_left"
            app:layout_constraintTop_toTopOf="@id/lblStartDate" />

        <TextView
            android:id="@+id/txtEndDate"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/lblEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lblEndDate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>