<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_no_image"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/lblFileName"
            style="@style/LabelCaptionStyle"
            android:text="@string/file_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtFileName"
            style="@style/TextCaptionStyle"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"

            app:layout_constraintEnd_toStartOf="@id/lblFileName"
            app:layout_constraintStart_toEndOf="@id/thumbnail"
            app:layout_constraintTop_toTopOf="@id/lblFileName"/>

        <TextView
            android:id="@+id/lblFileSize"
            style="@style/LabelCaptionStyle"
            android:text="@string/file_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtFileName"/>

        <TextView
            android:id="@+id/txtFileSize"
            style="@style/TextCaptionStyle"
            android:layout_width="wrap_content"
            android:layout_marginEnd="4dp"

            app:layout_constraintEnd_toStartOf="@id/lblFileSize"
            app:layout_constraintTop_toTopOf="@id/lblFileSize"/>

        <TextView
            style="@style/LabelCaptionStyle"
            android:text="@string/kilo_byte"
            app:layout_constraintEnd_toStartOf="@id/txtFileSize"
            app:layout_constraintTop_toTopOf="@id/lblFileSize"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>